two new sections added, home completed

--- a/index.html
+++ b/index.html
@@ -46,6 +46,47 @@
             </p>
         </div>
     </section>
+    <!-- Fin Sección Conócenos -->
+    <!-- Sección Cards -->
+    <section class="cards">
+        <div class="card bg-green">
+            <div>
+                <span class="bg-light-red">14-15 Oct</span>
+                <span>Evento <i class="fa-solid fa-circle"></i></span>
+            </div>
+            <img src="img/festival-conciencia-afro-espacio-afro.jpg" alt="">
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
+                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+            </div>
+            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+        </div>
+        <div class="card bg-yellow">
+            <div>
+                <span class="bg-light-purple">14-15 Oct</span>
+                <span>Actividad <i class="fa-solid fa-circle"></i></span>
+            </div>
+            <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="">
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
+                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+            </div>
+            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+        </div>
+
+
+    </section>
+
+    <!-- Fin Sección Cards -->
+    <!-- Sección Texto Grande -->
+    <section class="section-big-text">
+        <span>
+            <h3 class="big-text">Residencia artística afronteriza 2023</h3>
+            <a href="#" class="btn">Saber más</a>
+        </span>
+
+    </section>
+    <!-- Fin Sección Texto Grande  -->
 
 
     <!-- Sección Contacto -->
@@ -84,5 +125,14 @@
         </div>
     </footer> 
     <!-- Fin Footer -->
+    <!-- Elementos Comunes -->
+    <!-- Fin Elementos Comunes -->
+
+    <!-- JS Font Awesome -->
+    <script src="https://kit.fontawesome.com/b599c0549b.js" crossorigin="anonymous"></script>
+    <!-- JS Framework -->
+   
+    <!-- JS Propio -->
+    <script src="js/main.js"></script>
 </body>
 </html>
