--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
-        <div class="card bg-yellow">
+        <div class="card bg-light-purple">
             <div>
-                <span class="bg-light-purple">14-15 Oct</span>
+                <span class="bg-yellow">14-15 Oct</span>
                 <span>Actividad <i class="fa-solid fa-circle"></i></span>
             </div>
             <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="">
