correct menu mob scroll, new page, flavicon added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="img/flavicon.ico" type="image/x-icon">
+
     <title>Conciencia Afro</title>
 </head>
 <body>
@@ -139,7 +141,7 @@
             <nav>
                 <a href="#" id="item-1">Conócenos</a>
                 <a href="#" id="item-2">Actividades/Eventos</a>
-                <a href="#" id="item-3">Residencia</a>
+                <a href="resistencia.html" id="item-3">Residencia</a>
                 <a href="#" id="item-4">Contacto</a>
             </nav>
         </div>
