created scroll background-color animation

--- a/conocenos.html
+++ b/conocenos.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/flavicon.ico" type="image/x-icon">
-
     <title>Conciencia Afro</title>
 </head>
 <body>
@@ -27,51 +26,84 @@
     </header>
     <!-- Fin Header -->
     <!-- Hero -->
-    <main class="hero bg-light-red">
-        <!-- Sección con imagen -->
-        <div class="section-img bg-red">
-            <img src="img/conciencia-afro-quienes-somos-2.png" alt="Imagen de dos personas de espaldas mirando una red de imágenes relacionadas entre sí">
-        </div>
-        <!-- Seccion con texto -->
-        <section class="section-text">
-            <h1>Lo afro está en el centro<br>El futuro es ahora</h1>
-            <h5>Somos una propuesta artística, cultural y política centrada en reivindicar, celebrar y difundir nuestras realidades y conocimientos</h5>
-        </section>
-    </main> 
-    <!-- Fin Hero -->
-    <!-- Sección Conócenos -->
     <section class="section-black">
         <div>
-            <h2>Nuestro centro cultural</h2>
-            <a href="#" class="btn">Conócenos</a>
+            <h2>Centro cultural Conciencia Afro</h2>
+            <img src="img/conciencia-afro-quienes-somos.png" alt="">
+            <a href="#" class="btn">proyectos</a>
+            <a href="#" class="btn">Equipo</a>
         </div>
         <div>
-            <p>En Espacio Afro se imparten conferencias, clases de baile, de música, hacemos presentaciones de libros, exposiciones, monólogos, se proyectan películas, hay artistas residentes, se aprende, se disfruta, se debate y…nos pensamos todo el rato y de manera colectiva bajo el paraguas de lo afro. Pero, además, compartimos (saberes y modos de hacer) y nos celebramos.
-            Sí, celebramos nuestra existencia, nuestra resistencia, nuestra creatividad, nuestros éxitos y que contamos nuestras propias historias de mil formas y todas hermosas. Si abrimos nuestras puertas fue para dar cabida al máximo número posible de ellas. En esa línea, tenemos una librería en la que vendemos libros de esa África que se extiende, solo hay que vernos, mucho más allá del continente negro y una tiendecita con merchandising con diseños de artistas de la comunidad afro. 
-            </p>
+            <p>Conciencia-Afro es una propuesta artística, cultural y política centrada en reivindicar, celebrar y difundir nuestras realidades y nuestros conocimientos. Sí, en plural, puesto que tanto desde el continente africano como desde la diáspora, diseminada por todo el planeta, se generan culturas unidas por un cordón umbilical pero diferentes y propias. Nuestra organización lleva más de 6 años trabajando en el ámbito de la creación artística, el diseño de proyectos culturales y en el impulso de procesos comunitarios. Nacimos inspiradas en iniciativas como el Studio Museum in Harlem, el Museo del Barrio en Nueva York y el Museo Travesti del Perú de Giusepe Camuzano.</p>
         </div>
     </section>
-    <!-- Fin Sección Conócenos -->
+    <!-- Fin Hero -->
+
+
     <!-- Sección Cards -->
     <section class="cards">
-        <div class="card bg-green">
+        <article class="titular-section">
+            <h3 class="big-text">De dónde venimos</h3>
+            <h4>Proyectos</h4>
+        </article>
+        <!-- Card 1 -->
+        <div class="card bg-yellow">
             <div>
                 <span class="bg-light-red">14-15 Oct</span>
-                <span>Evento <i class="fa-solid fa-circle"></i></span>
+                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
-            <img src="img/festival-conciencia-afro-espacio-afro.jpg" alt="">
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
                 <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
+        <!-- Card 2 -->
+        <div class="card bg-red">
+            <div>
+                <span class="bg-light-purple">14-15 Oct</span>
+                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
+                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+            </div>
+            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+        </div>
+        <!-- Card vacía -->
+        <div class="card"></div>
+        <!-- Card 3 -->
+        <div class="card bg-light-red">
+            <div>
+                <span class="bg-light-purple">14-15 Oct</span>
+                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
+                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+            </div>
+            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+        </div>
+        <!-- Card 4 -->
+        <div class="card bg-light-green">
+            <div>
+                <span class="bg-light-purple">14-15 Oct</span>
+                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
+                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+            </div>
+            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+        </div>
+        <!-- Card Vacía -->
+        <div class="card"></div>
+        <!-- Card 5 -->
         <div class="card bg-light-purple">
             <div>
-                <span class="bg-yellow">14-15 Oct</span>
-                <span>Actividad <i class="fa-solid fa-circle"></i></span>
+                <span class="bg-light-purple">14-15 Oct</span>
+                <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
-            <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="">
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
                 <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
@@ -80,15 +112,13 @@
         </div>
     </section>
     <!-- Fin Sección Cards -->
-    <!-- Sección Texto Grande -->
-    <section class="section-big-text">
-        <span>
-            <h3 class="big-text">Residencia artística afronteriza 2023</h3>
-            <a href="#" class="btn">Saber más</a>
-        </span>
-
+    <!-- Sección Equipo -->
+    <section class="equipo">
+        <article class="titular-section">
+            <h3 class="big-text">Quiénes somos</h3>
+            <h4>Equipo</h4>
+        </article>
     </section>
-    <!-- Fin Sección Texto Grande  -->
     <!-- Sección Contacto -->
     <section class="main-section bg-light-purple">
         <!-- Sección con imagen -->
