--- a/resistencia.html
+++ b/resistencia.html
@@ -21,7 +21,7 @@
             <button id="btn_menu" class="btn_menu">
                 <span id="bar1"></span><span id="bar_middle"></span><span id="bar2"></span>
             </button>
-            <a href="#" class="btn-cta">ÚNETE</a>
+            <a href="ayuda.html" class="btn-cta">ÚNETE</a>
         </div>
     </header>
     <!-- Fin Header -->
@@ -53,7 +53,7 @@
         </div>
         <!-- Seccion con texto -->
         <div class="section-text">
-            <h4>Proyectos desarrollados</h1>
+            <h4>Proyectos desarrollados</h4>
             <ul>
                 <li>El nombre del padre, Chumo Mata</li>
                 <li>Todas vuelven, Sofía Perdomo</li>
@@ -98,10 +98,10 @@
         <!-- Pop-Up Menú -->
         <div class="menu-pop-up" id="menu-pop-up">
             <nav>
-                <a href="#" id="item-1">Conócenos</a>
-                <a href="#" id="item-2">Actividades/Eventos</a>
-                <a href="#" id="item-3">Residencia</a>
-                <a href="#" id="item-4">Contacto</a>
+                <a href="conocenos.html" id="item-1">Conócenos</a>
+                <a href="actividades.html" id="item-2">Actividades/Eventos</a>
+                <a href="resistencia.html" id="item-3">Residencia</a>
+                <a href="contacto.html" id="item-4">Contacto</a>
             </nav>
         </div>
     <!-- Fin Elementos Comunes -->
