testing mobile design

--- a/ayuda.html
+++ b/ayuda.html
@@ -16,7 +16,7 @@
             <p class="text-right"><a href="mailto:hola@conciencia-afro.com">hola@conciencia-afro.com</a></p>
         </div>
         <div>
-            <p>Espacio Afro es un proyecto comunitario y autogestionado que está saliendo adelante gracias a todas las personas que creyeron en él.</p>
+            <p class="text-left">Espacio Afro es un proyecto comunitario y autogestionado que está saliendo adelante gracias a todas las personas que creyeron en él.</p>
             <p class="text-right">No hay ningún tipo de permanencia.<br>Los descuentos no afectan a la librería.</p>
         </div>
     </div>
