--- a/conocenos.html
+++ b/conocenos.html
@@ -123,7 +123,7 @@
     <section class="main-section bg-light-purple">
         <!-- Sección con imagen -->
         <div class="section-img bg-purple">
-            <img src="img/espacio_afro_plantas.jpeg" alt="Rellenar">
+            <img src="img/gif-afro.gif" alt="Rellenar">
         </div>
         <!-- Seccion con texto -->
         <div class="section-text">
@@ -139,8 +139,10 @@
             <a href="index.html"><img src="img/Logo-Conciencia-Afro.svg" alt="Logo Conciencia Afro"></a>
             <div>
                 <p>Estamos en el número 49 de la Calle Cáceres en Madrid</p>
-                <p>Nuestro email es <a href="#">hola@conciencia-afro.com</a></p>
-                <div class="rrss"><p>Puedes seguirnos en:</p> <a href="#"><img src="img/instagram-icon-afro.png" alt="Icono Instagram"></a><a href="#"><img src="img/twitter-icon-afro.png" alt="Icono Twitter"></a></div>
+                <p>Nuestro email es <a href="mailto:hola@conciencia-afro.com">hola@conciencia-afro.com</a></p>
+                <!-- Iconos de redes sociales -->
+                <div class="rrss"><p>Puedes seguirnos en:</p> <a href="https://www.instagram.com/espacioafro/" target="_blank"><img src="img/instagram-icon-afro.png" alt="Icono Instagram"></a><a href="https://twitter.com/EspacioAfro/" target="_blank"><img src="img/twitter-icon-afro.png" alt="Icono Twitter"></a></div>
+                <!-- Fin Iconos de redes sociales -->
                 <p>O <a href="#" id="OpenModalNewsletter">suscribirte a nuestra newsletter</a> para enterarte de todo</p>
             </div>
         </div>
