added team section - Text To Image Hover Effect

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="section-black">
         <div>
             <h2>Nuestro centro cultural</h2>
-            <a href="#" class="btn">Conócenos</a>
+            <a href="conocenos.html" class="btn">Conócenos</a>
         </div>
         <div>
             <p>En Espacio Afro se imparten conferencias, clases de baile, de música, hacemos presentaciones de libros, exposiciones, monólogos, se proyectan películas, hay artistas residentes, se aprende, se disfruta, se debate y…nos pensamos todo el rato y de manera colectiva bajo el paraguas de lo afro. Pero, además, compartimos (saberes y modos de hacer) y nos celebramos.
@@ -84,7 +84,7 @@
     <section class="section-big-text">
         <span>
             <h3 class="big-text">Residencia artística afronteriza 2023</h3>
-            <a href="#" class="btn">Saber más</a>
+            <a href="resistencia.html" class="btn">Saber más</a>
         </span>
 
     </section>
