--- a/ayuda.html
+++ b/ayuda.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <p class="text-left">Espacio Afro es un proyecto comunitario y autogestionado que está saliendo adelante gracias a todas las personas que creyeron en él.</p>
-            <p class="text-right">No hay ningún tipo de permanencia.<br>Los descuentos no afectan a la librería.</p>
+            <h6 class="text-right">Guerrilla de Conciencia Afro</h6>
         </div>
     </div>
     <div class="panel" data-color="light-red">
@@ -34,8 +34,8 @@
                     </ul>
                 </div>
                 <div class="titulo-precio">
-                    <h4>La fuerza de nzinga</h4>
-                    <span>8€</span>
+                    <h4>Nzinga</h4>
+                    <span>8€/mes</span>
                 </div>
             </div>
         </div>
@@ -48,15 +48,15 @@
             <div>
                 <div>
                     <ul>
-                        <li>10% Descuento</li>
+                        <li>25% Descuento</li>
                         <li>Acceso a la biblioteca</li>
                         <li>Participación en el encuentro anual</li>
-                        <li>Chapa de conciencia afro</li>
+                        <li>Bolsa y dos chapas de conciencia afro</li>
                     </ul>
                 </div>
                 <div class="titulo-precio">
-                    <h4>La resistencia de Céspedes</h4>
-                    <span>20€</span>
+                    <h4>Céspedes</h4>
+                    <span>20€/mes</span>
                 </div>
             </div>
         </div>
@@ -69,19 +69,23 @@
             <div>
                 <div>
                     <ul>
-                        <li>10% Descuento</li>
+                        <li>25% Descuento</li>
                         <li>Acceso a la biblioteca</li>
                         <li>Participación en el encuentro anual</li>
-                        <li>Chapa de conciencia afro</li>
+                        <li>Bolsa y chapa de conciencia afro</li>
                     </ul>
                 </div>
                 <div class="titulo-precio">
-                    <h4>La templanza de Sankara</h4>
-                    <span>5€</span>
+                    <h4>Sankara</h4>
+                    <span>5€/mes</span>
                 </div>
             </div>
         </div>
         <a href="#" class="btn">Suscribirme</a>
+    </div>
+    <div class="panel" data-color="yellow">
+        <h2>¿Quieres hacer una donación puntual?</h2>
+        <a href="#" class="btn">Donar</a>
     </div>
     
 
