--- a/conocenos.html
+++ b/conocenos.html
@@ -28,10 +28,11 @@
     <!-- Hero -->
     <section class="section-black">
         <div>
-            <h2>Centro cultural Conciencia Afro</h2>
+            <h1>Centro cultural <br>Conciencia Afro</h1>
+            <a href="#proyectos" class="btn">proyectos</a>
+            <a href="#equipo" class="btn">Equipo</a>
             <img src="img/conciencia-afro-quienes-somos.png" alt="">
-            <a href="#" class="btn">proyectos</a>
-            <a href="#" class="btn">Equipo</a>
+            
         </div>
         <div>
             <p>Conciencia-Afro es una propuesta artística, cultural y política centrada en reivindicar, celebrar y difundir nuestras realidades y nuestros conocimientos. Sí, en plural, puesto que tanto desde el continente africano como desde la diáspora, diseminada por todo el planeta, se generan culturas unidas por un cordón umbilical pero diferentes y propias. Nuestra organización lleva más de 6 años trabajando en el ámbito de la creación artística, el diseño de proyectos culturales y en el impulso de procesos comunitarios. Nacimos inspiradas en iniciativas como el Studio Museum in Harlem, el Museo del Barrio en Nueva York y el Museo Travesti del Perú de Giusepe Camuzano.</p>
@@ -41,7 +42,7 @@
 
 
     <!-- Sección Cards -->
-    <section class="cards">
+    <section class="cards" id="proyectos">
         <article class="titular-section">
             <h3 class="big-text">De dónde venimos</h3>
             <h4>Proyectos</h4>
@@ -49,24 +50,25 @@
         <!-- Card 1 -->
         <div class="card bg-yellow">
             <div>
-                <span class="bg-light-red">14-15 Oct</span>
+                <span class="bg-light-red">2016 -  Actualidad</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <p>El festival nació con la idea de hacer visible las voces, los sueños y las realidades de las personas africanas y afrodescendientes que viven en España a través de sus expresiones culturales. Este festival, del cual se han celebrado ya seis ediciones (2016, 2017, 2018, 2019, 2021 y 2022), aúna política, estética, cultura, poética, música, baile, emprendimiento social, pedagogía, entre otras muchas cosas.</p>
+                <h4>FESTIVAL CONCIENCIA AFRO</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
         <!-- Card 2 -->
         <div class="card bg-red">
             <div>
-                <span class="bg-light-purple">14-15 Oct</span>
+                <span class="bg-light-purple">2017 - Actualidad</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <p>La biblioteca se creó en el año 2017 bajo tres ejes: aprender, crear y disfrutar.</p>
+                <p>El objetivo principal del proyecto ha sido el de conectar la producción cultural y de conocimiento antirracista de otras latitudes con la que se está dando en nuestro país, para generar espacios donde estimular el aprendizaje comunitario y la capacidad creativa.</p>
+                <h4>Biblioteca de creación</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
@@ -75,24 +77,24 @@
         <!-- Card 3 -->
         <div class="card bg-light-red">
             <div>
-                <span class="bg-light-purple">14-15 Oct</span>
+                <span class="bg-green">2016 - 2019</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <p>A-fronterizxs fue el equipo de educación del Espacio Conciencia Afro. Este proyecto centraba su trabajo en el impulso de acciones de co-aprendizaje en torno a África y su diáspora, la afrodescendencia y otras comunidades racializadas y diversas. Del trabajo realizado por este grupo nació la publicación “A-fronterizxs: un proyecto de co- aprendizaje” (2018). En la actualidad nuestro proyecto favorito es el Campamento Urbano.</p>
+                <h4>Equipo de educación</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
         <!-- Card 4 -->
         <div class="card bg-light-green">
             <div>
-                <span class="bg-light-purple">14-15 Oct</span>
+                <span class="bg-light-purple">2018 - 2020</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <p>Este espacio se creó con la idea de impulsar el autoconocimiento de la genealogía de mujeres afro en el Estado español, el autoconocimiento de feminismos afrodescendientes y la conexión (inter) generacional de las mujeres/colectivos que vienen trabajando en la comunidad.</p>
+                <h4>Espacio Afrofeminista</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
@@ -101,24 +103,62 @@
         <!-- Card 5 -->
         <div class="card bg-light-purple">
             <div>
-                <span class="bg-light-purple">14-15 Oct</span>
+                <span class="bg-purple">2016 - Actualidad</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <p>La Revista Digital Negrxs fue uno de los primeros proyectos que se crearon en Espacio Afro. Esta iniciativa nació con la idea de ser un espacio colaborativo de la comunidad negra, africana y afrodescendiente desde el cual sostener una conversación pausada y abierta desde los relatos y narrativas que se estaban (están) creando alrededor de la identidad colectiva y heterogénea de la comunidad Afro.</p>
+                <h4>Revista Digital “Negrxs”</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
     </section>
     <!-- Fin Sección Cards -->
     <!-- Sección Equipo -->
-    <section class="equipo">
+    <section class="equipo" id="equipo">
         <article class="titular-section">
             <h3 class="big-text">Quiénes somos</h3>
             <h4>Equipo</h4>
         </article>
+        <!-- Cards Equipo -->
+        <div class="container">
+            <div class="card-equipo" data-src="img/yeison-f-garcia-lopez.png">
+                <h5 class="big-text">Yeison F. García López</h5>
+                <p>Politólogo e investigador antirracista. Miembro y coordinador de la Asociación Conciencia Afro. Comisario del Festival Conciencia Afro (2016, 2017, 2018 y 2019). Director del Centro Cultural “Espacio Afro”. Mención honorífica en la categoría de Cultura en los Premios Nacionales de Juventud 2022. Finalista de los Premios Mandarache 2022 en la categoría de poesía</p>
+            </div>
+            <div class="card-equipo" data-src="img/amal-hussein.png">
+                <h5 class="big-text">Amal Hussein</h5>
+                <p>Graduada en ciencias políticas y gestión pública. Cuenta con experiencia en la incidencia social y política en defensa de los derecho humanos, con especial énfasis en la protección internacional y la erradicación de la mutilación genital femenina. Ahora se incorpora al equipo como directora de programas.</p>
+            </div>
+            <div class="card-equipo" data-src="img/lucia-asue-mbomio-rubio.png">
+                <h5 class="big-text">Lucía-Asué Mbomío Rubio</h5>
+                <p>Periodista. Autora de los libros  ‘Hija del camino’ y ‘Las que se atrevieron” (que está en proceso de convertirse en serie de Netflix)  Trabaja como reportera en Tve1 y colabora en medios escritos (El País, Ctxt, Píkara, Mundo Negro…) y en la radio (“La Ventana”, “Hoy por Hoy”...)</p>
+            </div>
+            <div class="card-equipo" data-src="img/esther-mayoko-ortega.png">
+                <h5 class="big-text">Esther (Mayoko) Ortega.</h5>
+                <p>Docente universitaria e investigadora. Es profesora en Tufts University y Skidmore College y coordinadora, en el mismo programa universitario, del Laboratorio de Pedagogías Antirracistas Interseccionales. Activista feminista-antirracista y de la disidencia sexual.</p>
+            </div>
+            <div class="card-equipo" data-src="img/moha-gerehou.png">
+                <h5 class="big-text">Moha Gerehou</h5>
+                <p>Fue periodista de elDiario.es y actualmente es colaborador en la revista Vogue y otros medios. Ex presidente de SOS Racismo en Madrid. Experto en temas de racismo, con análisis en artículos y vídeos. Autor del libro ‘Qué hace un negro como tú en un sitio como este’. Elegido entre los 'European Young Leaders 2020'.</p>
+            </div>
+            <div class="card-equipo" data-src="img/ana-bibang.jpg">
+                <h5 class="big-text">Ana Bibang</h5>
+                <p>Consultora legal, madrileña, afrodescendiente y afrofeminista. Ligada en sus inicios a la cultura Hip Hop y la industria musical del rap en castellano; en la actualidad es asesora en materia de Inmigración, Extranjería y Movilidad Internacional. Escribe la columna "EN MAYÙSCULAS" para la revista CTXT.</p>
+            </div>
+            <div class="card-equipo" data-src="img/marisol-saelo.jpg">
+                <h5 class="big-text">Marisol Saelo</h5>
+                <p>Graduada en trabajo social. Funcionaria de carrera. Experta en violencia de genero. Reconocida por la Comunidad de Madrid por su labor contra la violencia de genero en el año 2019.</p>
+            </div>
+            <div class="card-equipo" data-src="img/ruben-h-bermudez.png">
+                <h5 class="big-text">Rubén H. Bermúdez</h5>
+                <p>Creativo. Es autor del libro ‘Y tú, ¿por qué eres negro? (2017) y de la película ‘A todos nos gusta el plátano’ (2021). Ahora dice que quiere hacer un videojuego.</p>
+            </div>
+        <img src="img/yeison-f-garcia-lopez.png" alt="" class="hover-img">
+        </div>
+        <!-- Fin Cards Equipo -->
     </section>
+    <!-- Fin Sección Equipo -->
     <!-- Sección Contacto -->
     <section class="main-section bg-light-purple">
         <!-- Sección con imagen -->
@@ -183,5 +223,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- JS Propio -->
     <script src="js/main.js"></script>
+    <script src="js/hover-text-img.js"></script>
 </body>
 </html>
