--- a/ayuda.html
+++ b/ayuda.html
@@ -95,5 +95,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- JS Propio -->
     <script src="js/main.js"></script>
+    <script src="js/bg-color-effect.js"></script>
 </body>
 </html>
