changed font-size & added contact page

--- a/conocenos.html
+++ b/conocenos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/flavicon.ico" type="image/x-icon">
-    <title>Conciencia Afro</title>
+    <title>Conócenos</title>
 </head>
 <body>
     <!-- Header -->
@@ -50,7 +50,7 @@
         <!-- Card 1 -->
         <div class="card bg-yellow">
             <div>
-                <span class="bg-light-red">2016 -  Actualidad</span>
+                <span class="bg-light-red">2016 -  Act</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
@@ -62,7 +62,7 @@
         <!-- Card 2 -->
         <div class="card bg-red">
             <div>
-                <span class="bg-light-purple">2017 - Actualidad</span>
+                <span class="bg-light-purple">2017 - Act</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
@@ -103,7 +103,7 @@
         <!-- Card 5 -->
         <div class="card bg-light-purple">
             <div>
-                <span class="bg-purple">2016 - Actualidad</span>
+                <span class="bg-purple">2016 - Act</span>
                 <span>Proyecto <i class="fa-solid fa-circle"></i></span>
             </div>
             <div>
