--- a/resistencia.html
+++ b/resistencia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/flavicon.ico" type="image/x-icon">
-    <title>Conciencia Afro</title>
+    <title>Resistencia</title>
 </head>
 <body>
     <!-- Header -->
@@ -25,12 +25,12 @@
         </div>
     </header>
     <!-- Fin Header -->
-    <!-- Sección Conócenos -->
+    <!-- Sección Introducción Resistencia -->
     <section class="section-black">
         <div>
-            <h2>RESISTENCIA AFROFRONTERIZA 2023</h2>
+            <h1>RESISTENCIA AFROFRONTERIZA 2023</h1>
+            <a href="#proyectos-resistencia" class="btn">Proyectos desarrollados</a>
             <img src="img/residencia-espacio-afro.png" alt="">
-            <a href="#" class="btn">Proyectos desarrollados</a>
         </div>
         <div>
             <p>Un programa de creación en residencia que acompaña proyectos de creación artística que trabajan en torno a los conceptos de comunidad, cuerpo y memoria. El programa propone habitar lo afronterizo como un concepto colectivo a construir a partir de la experiencia del compartir juntas, tiempos de escucha, investigación, experimentación y vida.</p>
@@ -44,9 +44,9 @@
             <p>Coordinado por José Ramón Hernández</p> 
         </div>
     </section>
-    <!-- Fin Sección Conócenos -->
-    <!-- Sección Contacto -->
-    <section class="main-section bg-light-purple">
+    <!-- Fin Sección Introducción Resistencia -->
+    <!-- Sección Proyectos Resistencia -->
+    <section class="main-section bg-light-purple" id="proyectos-resistencia">
         <!-- Sección con imagen -->
         <div class="section-img bg-purple">
             <img src="img/residencia-espacio-afro-02-web.png" alt="Rellenar">
@@ -63,7 +63,7 @@
             </ul>
         </div>
     </section>
-    <!-- Fin Sección Contacto -->
+    <!-- Fin Sección Proyectos Resistencia -->
     <!-- Footer --> 
     <footer>
         <div class="top-footer bg-yellow">
