added activities page

--- a/index.html
+++ b/index.html
@@ -61,20 +61,22 @@
             </div>
             <img src="img/festival-conciencia-afro-espacio-afro.jpg" alt="">
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
+                <p>El Festival Conciencia Afro 2023 es un espacio para el encuentro, la afectividad y el pensamiento de la comunidad afro en España. Este año en colaboración con La Casa Encendida, que aúna política, estética, música, emprendimiento y pedagogía y en el que las personas protagonistas y organizadoras son parte de la propia comunidad residente en el contexto español.</p>
                 <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
             </div>
-            <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+            <div>
+                <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
+            </div>
         </div>
         <div class="card bg-light-purple">
             <div>
                 <span class="bg-yellow">14-15 Oct</span>
                 <span>Actividad <i class="fa-solid fa-circle"></i></span>
             </div>
-            <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="">
+            <img src="img/performance-o-som-das-mortas-yola-balagan-espacio-afro.jpg" alt="Performance O som das Mortas de Yola Balagan">
             <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. ut labore et dolore magna aliqua</p>
-                <h4>FESTIVAL CONCIENCIA AFRO 2023</h4>
+                <p>Es una performance que retrata la muerte de cuerpos/mujeres negros provocada en muchos casos por la violencia de género, feminicidios, machismos, pero también es una reflexión sobre la educación que nos enseña defensa personal y sentirnos bien con nuestro propio cuerpo.</p>
+                <h4>Performance 'O som das Mortas' de Yola Balagan</h4>
             </div>
             <a href="#"><img src="img/arrow-right.svg" alt="Flecha derecha"></a>
         </div>
